# rusterix

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  XML_SCHEMA.md  architecture.mmd  build.rs  count_loc.py  generated.rs  rasterix.dtd  rusterix.dtd  test.xml
data_builder/: builder.rs  mod.rs
data_builder/generate/: mod.rs  rust.rs
data_builder/generate/rust/: decode_gen.rs  encode_gen.rs  field_extractor.rs  generator.rs  mod.rs  struct_gen.rs  utils.rs
data_builder/parse/: parser.rs  xml_model.rs
data_builder/transform/: ir.rs  transformer.rs
rasterix/: Cargo.toml  README.md  build.rs
rasterix-codegen/: Cargo.toml  README.md
rasterix-codegen/src/: builder.rs
rasterix-codegen/src/generate/: datablock_gen.rs  generator.rs  record_gen.rs  utils.rs
rasterix-codegen/src/parse/: mod.rs
rasterix-codegen/src/transform/: ir.rs  mod.rs
rasterix-codegen/tests/: codegen_tests.rs  parse_tests.rs  transform_tests.rs
rasterix-core/: Cargo.toml  README.md
rasterix-core/src/: bit_reader.rs  bit_writer.rs  buffer.rs  error.rs  lib.rs
rasterix/src/: lib.rs
rasterix/tests/: builder_tests.rs  cat048.xml  roundtrip_tests.rs  test.xml
rasterix/tests/fixtures/invalid/: bit_mismatch.xml  duplicate_enum_field.xml  duplicate_epb_enum.xml  duplicate_epb_field.xml  duplicate_field_same_scope.xml  extended_bit_mismatch.xml
rasterix/tests/fixtures/valid/: compound_complex.xml  compound_simple.xml  enum_basic.xml  epb_enum.xml  epb_field.xml  explicit_item.xml  extended_multi_part.xml  extended_single_part.xml  mixed_all.xml  multi_item_record.xml  repetitive_basic.xml  repetitive_with_epb.xml  same_name_different_items.xml  same_name_different_parts.xml  same_name_different_subitems.xml  simple_fixed.xml  spare_bits.xml
rasterix/tests/roundtrip/: mod.rs
rusterix/: Cargo.toml  README.md  build.rs
rusterix-codegen/: Cargo.toml  README.md
rusterix-codegen/src/: lib.rs
rusterix-codegen/src/generate/: decode_gen.rs  encode_gen.rs  enum_gen.rs  generator.rs  item_gen.rs  mod.rs  record_gen.rs  struct_gen.rs  utils.rs
rusterix-codegen/src/lower/: ir.rs  lowerer.rs  mod.rs
rusterix-codegen/src/parse/: parser.rs  xml_model.rs
rusterix-codegen/src/transform/: ir.rs  lower_ir.rs  lowerer.rs  transformer.rs
rusterix-codegen/tests/: codegen_tests.rs  parse_tests.rs  regenerate_expected.rs  transform_tests.rs
rusterix-core/: Cargo.toml  README.md
rusterix-core/src/: bit_reader.rs  bit_writer.rs  buffer.rs  error.rs  fspec.rs  lib.rs
rusterix/src/: lib.rs
rusterix/tests/: builder_tests.rs  cat048.xml  roundtrip_tests.rs  test.xml
rusterix/tests/fixtures/expected/: compound_simple.rs  enum_basic.rs  epb_field.rs  repetitive_basic.rs
rusterix/tests/fixtures/invalid/: bit_mismatch.xml  duplicate_enum_field.xml  duplicate_epb_enum.xml  duplicate_epb_field.xml  duplicate_field_same_scope.xml  extended_bit_mismatch.xml
rusterix/tests/fixtures/valid/: compound_complex.xml  compound_simple.xml  enum_basic.xml  epb_enum.xml  epb_field.xml  explicit_item.xml  extended_multi_part.xml  extended_single_part.xml  mixed_all.xml  multi_item_record.xml  repetitive_basic.xml  repetitive_with_epb.xml  same_name_different_items.xml  same_name_different_parts.xml  same_name_different_subitems.xml  simple_fixed.xml  spare_bits.xml
rusterix/tests/roundtrip/: mod.rs
src/: builder.rs  framework.rs  lib.rs  test.rs
src/framework/: bit_reader.rs  bit_writer.rs  buffer.rs  commons.rs  data_block.rs  data_types.rs  extended_length.rs  fixed_length.rs  fspec.rs  ifspec.rs  mod.rs  record.rs
src/framework/data_types/: extended_length.rs  fixed_length.rs
src/generate/: decode_gen.rs  encode_gen.rs  enum_gen.rs  generator.rs  item_gen.rs  mod.rs  struct_gen.rs  utils.rs
src/generate/rust/: decode_gen.rs  encode_gen.rs  field_extractor.rs  generator.rs  mod.rs  struct_gen.rs  utils.rs
src/parse/: mod.rs  parser.rs  xml_model.rs
src/rcore/: bit_writer.rs  error.rs
src/transform/: ir.rs  mod.rs  transformer.rs
test/: cat048.xml  lib_tests.rs  test_helper.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
testdata/expected/: explicit_item.rs  extended_multi_part.rs  multi_item_record.rs  simple_fixed.rs  spare_bits.rs
testdata/invalid/: bit_mismatch.xml  duplicate_enum_field.xml  duplicate_epb_enum.xml  duplicate_epb_field.xml  duplicate_field_same_scope.xml  extended_bit_mismatch.xml
testdata/valid/: compound_complex.xml  compound_simple.xml  enum_basic.xml  epb_enum.xml  epb_field.xml  explicit_item.xml  extended_multi_part.xml  extended_single_part.xml  mixed_all.xml  multi_item_record.xml  repetitive_basic.xml  repetitive_with_epb.xml  same_name_different_items.xml  same_name_different_parts.xml  same_name_different_subitems.xml  simple_fixed.xml  spare_bits.xml
tests/: cat048.xml  fixed_lengtht.rs  generate_expected.rs  lib_tests.rs  test.xml  utils.rs
tests/common/: mod.rs
tests/fixtures/expected/: compound_simple.rs  enum_basic.rs  epb_field.rs  explicit_item.rs  extended_multi_part.rs  multi_item_record.rs  repetitive_basic.rs  simple_fixed.rs  spare_bits.rs
tests/fixtures/invalid/: bit_mismatch.xml  duplicate_enum_field.xml  duplicate_epb_enum.xml  duplicate_epb_field.xml  duplicate_field_same_scope.xml  extended_bit_mismatch.xml
tests/fixtures/valid/: compound_complex.xml  compound_simple.xml  enum_basic.xml  epb_enum.xml  epb_field.xml  explicit_item.xml  extended_multi_part.xml  extended_single_part.xml  mixed_all.xml  multi_item_record.xml  repetitive_basic.xml  repetitive_with_epb.xml  same_name_different_items.xml  same_name_different_parts.xml  same_name_different_subitems.xml  simple_fixed.xml  spare_bits.xml
