[workspace]
resolver = "3"
members = [
    "rusterix-core",
    "rusterix-codegen",
    "rusterix",
    "test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Library that use code generation to create efficient Rust code for encoding and decoding ASTERIX messages based on XML specifications."
repository = "https://github.com/davidegalletti99/rusterix"
homepage = "https://github.com/davidegalletti99/rusterix"
readme = "README.md"
