[package]
name = "rasterix-core"
version = "0.1.0"
edition = "2024"
description = "Core runtime library for ASTERIX message encoding and decoding"
license = "MIT"
repository = "https://github.com/davidegalletti99/rasterix"
homepage = "https://github.com/davidegalletti99/rasterix"
readme = "README.md"

[dependencies]

[dev-dependencies]
test-utils = { path = "../test-utils" }
