[package]
name = "rasterix"
version = "0.1.0"
edition = "2024"
description = "ASTERIX message encoding/decoding library"
license = "MIT"
repository = "https://github.com/davidegalletti99/rasterix"
homepage = "https://github.com/davidegalletti99/rasterix"
readme = "README.md"

[dependencies]
rasterix-core = { path = "../rasterix-core", version = "0.1.0" }
rasterix-codegen = { path = "../rasterix-codegen", version = "0.1.0" }

[build-dependencies]
rasterix-codegen = { path = "../rasterix-codegen", version = "0.1.0" }

[dev-dependencies]
test-utils = { path = "../test-utils" }