[package]
name = "rusterix-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = "2.0.114"
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.31", features = ["serialize"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
test-utils = { path = "../test-utils" }