[package]
name = "rusterix"
version = "0.1.0"
edition = "2024"
description = "ASTERIX message encoding/decoding library"
license = "MIT"
repository = "https://github.com/davidegalletti99/rusterix"
homepage = "https://github.com/davidegalletti99/rusterix"
readme = "README.md"

[dependencies]
rusterix-core = { path = "../rusterix-core" }
rusterix-codegen = { path = "../rusterix-codegen" }

[build-dependencies]
rusterix-codegen = { path = "../rusterix-codegen" }

[dev-dependencies]
test-utils = { path = "../test-utils" }